fix location names on small screens

--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -7,7 +7,7 @@ page-info {
 
     .card-title {
         position: absolute;
-        top: 20%;
+        top: 5%;
         font-size: 2.0em;
         width: 100%;
         font-weight: bold;
